[package]
name = "moq"
description = "Mock generator"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/LazyMechanic/moq"
keywords = ["test", "mock", "mocking", "generator"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq_derive = { version = "=0.1.0", path = "../moq_derive" }

async-trait = "0.1"