[package]
name = "moq_derive"
description = "Mock generator (macro implementations)"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.3.1"
repository = "https://github.com/LazyMechanic/moq"
documentation = "https://docs.rs/moq"
keywords = ["test", "mock", "mocking", "generator"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.13"
proc-macro2 = "1.0"
proc-macro2-diagnostics = "0.10"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
