[package]
name = "moq_lambda"
description = "Lambda generator"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
repository = "https://github.com/LazyMechanic/moq"
documentation = "https://docs.rs/moq"
keywords = ["test", "mock", "mocking", "generator"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"