[package]
name = "moq_test_suite"
version = "0.0.0"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
moq = { path = "../moq" }
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }